[project]
name = "python-virtual-camera-simulator"
version = "0.1.0"
description = "Virtual Camera Simulator for understanding camera projections"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.0",
    "kiwisolver==1.4.8",
    "lxml==5.4.0",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytransform3d==3.14.0",
    "scipy==1.15.3",
    "six==1.17.0",
]
authors=[
    {name="Anand Panchal", email="anand@robocode51.com"}
]